$size[14]{$u{Update for 15.07.24:}
  * added button to show party member names on minimap
  * fixed ridge highlight
 
$size[14]{$u{Update for 14.07.24:}
  * added Options -> Colors panel - allows to tweak various colors used by client
  * added Options -> Display -> Colorize ridge tiles
 
$size[14]{$u{Update for 13.07.24:}
  * added action to aggro creature nearest to cursor that is not in your party (eXtra -> Automation -> Aggro one). Also, can be bound in global hotkey settings.
  * added action to aggro all non-party members near you (eXtra -> Automation -> Aggro all). Also, can be bound in global hotkey settings.
  * added option to highlight party members during combat
  * added option to highlight self during combat
  * added option to highlight enemies during combat
  * added option (Display -> Show mine support radius as overlay) that will highlight tiles covered by mine supports, instead of drawing radius around supports. Turned on by default.
 
$size[14]{$u{Update for 30.06.24:}
  * fixed startup buffs not working
  * fixed chat losing focus when items stack in inventory 
 
$size[14]{$u{Update for 29.06.24:}
  * added whirling snowflake to critters
 
$size[14]{$u{Update for 28.06.24:}
  * merged loftar's code 
 
$size[14]{$u{Update for 07.06.24:}
  * merged loftar's code
  * fixed another potential crash on client start related to QuestHelper
  * added earth worms to auto-pickup command list 
 
$size[14]{$u{Update for 29.05.24:}
  * fixed overlap in Realm Blessings window
  * fixed another potential crash on client start related to QuestHelper 
 
$size[14]{$u{Update for 28.05.24:}
  * merged loftar's code
  * added Full Screen option in Video settings
  * fixed potential crash on client start related to QuestHelper
 
$size[14]{$u{Update for 19.03.24:}
  * fixed ConcurrentModificationException in Buddy's Info 
  * fixed NPE in Buddy code 
 
$size[14]{$u{Update for 18.03.24:}
  * fixed food tooltip hanging client if food has no hunger stats