@@ -1,6 +1,9 @@
 $size[14]{$u{Update for 15.07.24:}
   * added button to show party member names on minimap
   * fixed ridge highlight
+  * fixed aggro one/all not targeting some animals 
+  * made aggro one/all actions not aggro own horse or those of party members
+  * made aggro one/all actions not aggro KO creatures
  
 $size[14]{$u{Update for 14.07.24:}
   * added Options -> Colors panel - allows to tweak various colors used by client
